--- a/src/MLS.WebUI/src/styles.scss
+++ b/src/MLS.WebUI/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background: #0b0b0b;
+  color: #fff;
+}
+
+.hideScrollbar::-webkit-scrollbar {
+  display: none;
+}
