feat: Add new menu, welcome, user-info, and login-layout components

--- a/src/MLS.WebUI/src/app/modules/app.component.html
+++ b/src/MLS.WebUI/src/app/modules/app.component.html
@@ -1,11 +1,5 @@
-<div class="py-5">
-    navbar
-</div>
+<div class="py-5">navbar</div>
 
-<div>
-    home
-</div>
+<div>home</div>
 
-<div class="py-5">
-    footer
-</div>
+<div class="py-5">footer</div>
