--- a/src/MLS.WebUI/src/styles.scss
+++ b/src/MLS.WebUI/src/styles.scss
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   background: #0b0b0b;
   color: #fff;
 }
