refactor: Update component selector and page title in app.component.ts and index.html

--- a/src/MLS.WebUI/src/styles.scss
+++ b/src/MLS.WebUI/src/styles.scss
@@ -6,8 +6,8 @@
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  background: #0b0b0b;
-  color: #fff;
+  // background: #0b0b0b;
+  color: black;
 }
 
 .hideScrollbar::-webkit-scrollbar {
