--- a/src/MLS.WebUI/src/styles.scss
+++ b/src/MLS.WebUI/src/styles.scss
@@ -7,7 +7,7 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   // background: #0b0b0b;
-  color: black;
+  //color: black;
 }
 
 .hideScrollbar::-webkit-scrollbar {
