--- a/src/MLS.WebUI/src/app/theme/components/header/header.component.html
+++ b/src/MLS.WebUI/src/app/theme/components/header/header.component.html
@@ -144,7 +144,7 @@
       <a class="text-sm font-semibold leading-6 text-gray-900" href="#">Company</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-      <a class="text-sm font-semibold leading-6 text-gray-900" href="#"> Log in <span aria-hidden="true">&rarr;</span> </a>
+      <a class="text-sm font-semibold leading-6 text-gray-900" routerLink="/login"> Log in <span aria-hidden="true">&rarr;</span> </a>
     </div>
   </nav>
   <!-- Mobile menu, show/hide based on menu open state. -->
@@ -204,7 +204,7 @@
             <a class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50" href="#"> Company </a>
           </div>
           <div class="py-6">
-            <a class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50" href="#"> Log in </a>
+            <a class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50" routerLink="/login"> Log in </a>
           </div>
         </div>
       </div>
