--- a/src/MLS.WebUI/src/app/theme/pages/login-layout/login-layout.component.html
+++ b/src/MLS.WebUI/src/app/theme/pages/login-layout/login-layout.component.html
@@ -1,9 +1,9 @@
-<div class="bg-white rounded-lg py-5">
+<div class="bg-white rounded-lg">
   <div class="container flex flex-col mx-auto bg-white rounded-lg pt-12 my-5">
     <div class="flex justify-center w-full h-full my-auto xl:gap-14 lg:justify-normal md:gap-5 draggable">
       <div class="flex items-center justify-center w-full lg:p-12">
-        <div class="flex items-center xl:p-10">
-          <form class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
+        <div class="flex items-center xl:p-10 shadow-slate-400 login-item">
+          <form #loginForm="ngForm" (ngSubmit)="loginClick()" autocomplete="off" class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
             <h3 class="mb-3 text-4xl font-extrabold text-dark-grey-900">Sign In</h3>
             <p class="mb-4 text-grey-700">Enter your email and password</p>
             <a
@@ -19,13 +19,17 @@
             </div>
             <label class="mb-2 text-sm text-start text-grey-900" for="email">Email*</label>
             <input
+              name="username"
+              [(ngModel)]="model.username"
               class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
               id="email"
-              placeholder="mail@loopple.com"
+              placeholder="username@gmail.com"
               type="email"
             />
             <label class="mb-2 text-sm text-start text-grey-900" for="password">Password*</label>
             <input
+              name="password"
+              [(ngModel)]="model.password"
               class="flex items-center w-full px-5 py-4 mb-5 mr-2 text-sm font-medium outline-none focus:bg-grey-400 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
               id="password"
               placeholder="Enter a password"
@@ -41,23 +45,24 @@
               </label>
               <a class="mr-4 text-sm font-medium text-purple-blue-500" href="javascript:void(0)">Forget password?</a>
             </div>
-            <button
+            <!-- <button
               class="w-full px-6 py-5 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl hover:bg-purple-blue-600 focus:ring-4 focus:ring-purple-blue-100 bg-purple-blue-500"
+              type="submit"
             >
               Sign In
-            </button>
+            </button> -->
+            <button class="btn btn-outline-success" type="submit">Login</button>
             <p class="text-sm leading-relaxed text-grey-900">Not registered yet? <a class="font-bold text-grey-700" href="javascript:void(0)">Create an Account</a></p>
           </form>
         </div>
       </div>
     </div>
   </div>
-  <div class="flex flex-wrap -mx-3 my-5">
+  <div class="flex flex-wrap -mx-3 my-5 bg-sky-500">
     <div class="w-full max-w-full sm:w-3/4 mx-auto text-center">
-      <p class="text-sm text-slate-500 py-1">
-        Tailwind CSS Component from
-        <a class="text-slate-700 hover:text-slate-900" href="https://www.loopple.com/theme/motion-landing-library?ref=tailwindcomponents" target="_blank">Motion Landing Library</a> by
-        <a class="text-slate-700 hover:text-slate-900" href="https://www.loopple.com" target="_blank">Loopple Builder</a>.
+      <p class="text-sm text-cyan-50 py-1">
+        MatLidStore is developed by
+        <a class="text-cyan-50 hover:text-cyan-200" href="https://github.com/phamtiendungcw" target="_blank"> phamtiendungcw</a>
       </p>
     </div>
   </div>
