--- a/src/MLS.WebUI/src/styles.scss
+++ b/src/MLS.WebUI/src/styles.scss
@@ -4,10 +4,8 @@
 @tailwind utilities;
 
 body {
-  margin: 0;
+  // margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  // background: #0b0b0b;
-  //color: black;
 }
 
 .hideScrollbar::-webkit-scrollbar {
