Refactor AccountController and update UI components
Reorganized using directives in AccountController.cs. Added AllowAnonymous attribute to AccountController class. Updated RegisterUser and LoginUser methods with ProducesResponseType attributes. Changed LoginUser return type to ActionResult<UserDetailsDto>.

Refactored mls-data.service.ts to focus on ProductColor, ProductImage, and ProductOption methods. Added new methods and improved JSON parsing and error handling.

Updated footer and header components to reorder img tag attributes and initialize logoUrl property. Modified login-layout component to enhance form usability and handle user details.

--- a/src/MLS.WebUI/src/app/theme/components/header/header.component.html
+++ b/src/MLS.WebUI/src/app/theme/components/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="flex lg:flex-1">
       <a class="-m-1.5 p-1.5" href="#">
         <span class="sr-only">MatLid Store</span>
-        <img alt="" class="h-8 w-auto" [src]="logoUrl" height="2048" width="2048" />
+        <img [src]="logoUrl" alt="" class="h-8 w-auto" height="2048" width="2048" />
       </a>
     </div>
     <div class="flex lg:hidden">
