--- a/src/MLS.WebUI/src/app/theme/components/footer/footer.component.html
+++ b/src/MLS.WebUI/src/app/theme/components/footer/footer.component.html
@@ -3,7 +3,7 @@
   <div class="max-w-screen-xl px-4 py-16 mx-auto sm:px-6 lg:px-8">
     <div class="grid grid-cols-1 gap-8 lg:grid-cols-3">
       <div>
-        <img alt="logo" class="mr-5 h-6 w-auto sm:h-9" [src]="logoUrl" height="2048" width="2048" />
+        <img [src]="logoUrl" alt="logo" class="mr-5 h-6 w-auto sm:h-9" height="2048" width="2048" />
         <p class="max-w-xs mt-4 text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, accusantium.</p>
         <div class="flex mt-8 space-x-6 text-gray-600">
           <a class="hover:opacity-75" href rel="noreferrer" target="_blank">
