--- a/src/MLS.WebUI/src/app/theme/pages/login-layout/login-layout.component.html
+++ b/src/MLS.WebUI/src/app/theme/pages/login-layout/login-layout.component.html
@@ -3,7 +3,7 @@
     <div class="flex justify-center w-full h-full my-auto xl:gap-14 lg:justify-normal md:gap-5 draggable">
       <div class="flex items-center justify-center w-full lg:p-12">
         <div class="flex items-center xl:p-10 shadow-slate-400 login-item">
-          <form #loginForm="ngForm" (ngSubmit)="loginClick()" autocomplete="off" class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
+          <form #loginForm="ngForm" (ngSubmit)="loginClick()" class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
             <h3 class="mb-3 text-4xl font-extrabold text-dark-grey-900">Sign In</h3>
             <p class="mb-4 text-grey-700">Enter your email and password</p>
             <a
@@ -19,19 +19,19 @@
             </div>
             <label class="mb-2 text-sm text-start text-grey-900" for="email">Email*</label>
             <input
-              name="username"
               [(ngModel)]="model.username"
               class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
               id="email"
+              name="username"
               placeholder="username@gmail.com"
               type="email"
             />
             <label class="mb-2 text-sm text-start text-grey-900" for="password">Password*</label>
             <input
-              name="password"
               [(ngModel)]="model.password"
               class="flex items-center w-full px-5 py-4 mb-5 mr-2 text-sm font-medium outline-none focus:bg-grey-400 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
               id="password"
+              name="password"
               placeholder="Enter a password"
               type="password"
             />
