Refactor: Add dashboard component and styles
- Added a new dashboard component and its corresponding HTML and SCSS files.
- Imported the dashboard component in the app-admin module.
- Updated the app-admin module to import necessary dependencies from the theme module.

--- a/src/MLS.MatLidStoreUI/src/app/modules/app-admin/admin-home/admin-home.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/modules/app-admin/admin-home/admin-home.component.html
@@ -1,1 +1,7 @@
-<p>admin-home works!</p>
+<app-header></app-header>
+<div class="py-2">
+  <app-dashboard></app-dashboard>
+</div>
+<div class="py-2">
+  <app-footer></app-footer>
+</div>
