--- a/src/MLS.MatLidStoreUI/src/styles.scss
+++ b/src/MLS.MatLidStoreUI/src/styles.scss
@@ -2,3 +2,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
