Refactor: Update component structure in admin-home and app-admin-routing.module.ts

--- a/src/MLS.MatLidStoreUI/src/app/modules/app-admin/admin-home/admin-home.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/modules/app-admin/admin-home/admin-home.component.html
@@ -1,6 +1,8 @@
-<app-header></app-header>
 <div class="py-2">
-  <app-dashboard></app-dashboard>
+  <app-header></app-header>
+</div>
+<div class="py-2">
+  <router-outlet></router-outlet>
 </div>
 <div class="py-2">
   <app-footer></app-footer>
