--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
@@ -1,1 +1,59 @@
-<p>account works!</p>
+<div class="bg-white rounded-lg">
+  <div class="container flex flex-col mx-auto bg-white rounded-lg">
+    <div class="flex justify-center w-full h-full my-auto xl:gap-14 lg:justify-normal md:gap-5 draggable">
+      <div class="flex items-center justify-center w-full lg:p-12">
+        <div class="flex items-center xl:p-10">
+          <form class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
+            <h3 class="mb-3 text-4xl font-extrabold text-dark-grey-900">Đăng nhập hệ thống MatLidStore</h3>
+            <p class="mb-4 text-grey-700">Nhập tên người dùng và mật khẩu của bạn</p>
+            <a
+              class="flex items-center justify-center w-full py-4 mb-6 text-sm font-medium transition duration-300 rounded-2xl text-grey-900 bg-grey-300 hover:bg-grey-400 focus:ring-4 focus:ring-grey-300">
+              <img
+                class="h-5 mr-2"
+                src="https://raw.githubusercontent.com/Loopple/loopple-public-assets/main/motion-tailwind/img/logos/logo-google.png"
+                alt="" />
+              Đăng nhập bằng Google
+            </a>
+            <div class="flex items-center mb-3">
+              <hr class="h-0 border-b border-solid border-grey-500 grow" />
+              <p class="mx-4 text-grey-600">hoặc</p>
+              <hr class="h-0 border-b border-solid border-grey-500 grow" />
+            </div>
+            <label for="username" class="mb-2 text-sm text-start text-grey-900">Tên người dùng*</label>
+            <input
+              id="username"
+              type="text"
+              placeholder="Nhập tên người dùng"
+              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl" />
+            <label for="password" class="mb-2 text-sm text-start text-grey-900">Mật khẩu*</label>
+            <input
+              id="password"
+              type="password"
+              placeholder="Nhập mật khẩu"
+              class="flex items-center w-full px-5 py-4 mb-5 mr-2 text-sm font-medium outline-none focus:bg-grey-400 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl" />
+            <div class="flex flex-row justify-between mb-8">
+              <label class="relative inline-flex items-center mr-3 cursor-pointer select-none">
+                <div class="flex items-center mb-4">
+                  <input
+                    id="default-checkbox"
+                    type="checkbox"
+                    value=""
+                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600" />
+                  <label for="default-checkbox" class="ml-3 text-sm font-normal text-grey-900">Ghi nhớ đăng nhập</label>
+                </div>
+              </label>
+              <a href="javascript:void(0)" class="mr-4 text-sm font-medium text-purple-blue-500">Quên mật khẩu?</a>
+            </div>
+            <button
+              class="w-full px-6 py-3 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl hover:bg-purple-blue-600 focus:ring-4 focus:ring-purple-blue-100 bg-purple-blue-500">
+              Đăng nhập
+            </button>
+            <p class="text-sm leading-relaxed text-grey-900">
+              Nếu bạn chưa đăng ký? <a href="javascript:void(0)" class="font-bold text-grey-700">Tạo một tài khoản</a>
+            </p>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
