--- a/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
@@ -1,1 +1,59 @@
-<p>footer works!</p>
+<!-- component -->
+<footer class="bg-white dark:bg-gray-900">
+  <div class="container px-6 mx-auto">
+    <hr class="border-gray-200 dark:border-gray-300" />
+    <div class="flex flex-col items-center text-center">
+      <a href="#">
+        <img class="w-auto h-16" src="/assets/Images/MatLidStore_Logo.png" alt="MatLidStore logo" />
+      </a>
+
+      <p class="max-w-md mx-auto mt-4 text-gray-500 dark:text-gray-400">
+        Modern Artistic Trends in Lifestyle & Design.
+      </p>
+
+      <div class="flex flex-col mt-4 items-center sm:flex-row sm:items-center sm:justify-center">
+        <!-- app.component.html -->
+        <button
+          (click)="onGitHubClick()"
+          class="github-container flex p-1 w-1 text-sm tracking-wide text-gray-600 capitalize transition-colors duration-300 transform border rounded-md sm:mx-2 dark:border-gray-400 dark:text-gray-300 sm:mt-0 sm:w-auto hover:bg-gray-50 focus:outline-none focus:ring dark:hover:bg-gray-800 focus:ring-gray-300 focus:ring-opacity-40">
+          <div class="github-logo-container flex mx-1 h-5 w-5"></div>
+          <span class="mx-1">GitHub</span>
+        </button>
+
+        <button
+          class="w-full px-3 py-1 text-sm tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-md sm:mx-2 sm:order-2 sm:w-auto hover:bg-blue-300 focus:outline-none focus:ring focus:ring-blue-200 focus:ring-opacity-80">
+          Thông tin
+        </button>
+      </div>
+    </div>
+
+    <hr class="my-10 border-gray-200 dark:border-gray-700" />
+
+    <div class="flex flex-col items-center sm:flex-row sm:justify-between">
+      <p class="text-sm text-gray-500">© Copyright 2024. All Rights Reserved by MatLidStore.</p>
+
+      <div class="flex mt-3 -mx-2 sm:mt-0">
+        <a
+          href="#"
+          class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
+          aria-label="Reddit">
+          Teams
+        </a>
+
+        <a
+          href="#"
+          class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
+          aria-label="Reddit">
+          Privacy
+        </a>
+
+        <a
+          href="#"
+          class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
+          aria-label="Reddit">
+          Cookies
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
