--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
@@ -4,7 +4,7 @@
       <div class="flex items-center justify-center w-full lg:p-12">
         <div class="flex items-center xl:p-10">
           <form class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
-            <h3 class="mb-3 text-4xl font-extrabold text-dark-grey-900">Đăng nhập hệ thống MatLidStore</h3>
+            <h3 class="mb-3 text-4xl font-extrabold text-dark-grey-900">Đăng Nhập</h3>
             <p class="mb-4 text-grey-700">Nhập tên người dùng và mật khẩu của bạn</p>
             <a
               class="flex items-center justify-center w-full py-4 mb-6 text-sm font-medium transition duration-300 rounded-2xl text-grey-900 bg-grey-300 hover:bg-grey-400 focus:ring-4 focus:ring-grey-300">
