Refactor and update project configurations
- Changed project name in `angular.json` from `MLS.MatLidStoreUI` to `MLSUI`.
- Removed schematics configuration for various Angular components.
- Updated build architect builder to `@angular-devkit/build-angular:browser`.
- Updated polyfills configuration to include `src/polyfills.ts`.
- Reformatted assets and scripts arrays to multi-line syntax.
- Enhanced production configuration with file replacements and updated budgets.
- Updated `browserTarget` references for `serve` and `extract-i18n` configurations.
- Refactored `polyfills`, `assets`, `styles`, and `lintFilePatterns` arrays to multi-line syntax.
- Reformatted `schematicCollections` array in the `cli` section.
- Major refactor in `mls-data.service.ts` for better organization and error handling.
- Improved routing structure with lazy loading and updated redirects.
- Enhanced header and footer components for better structure and functionality.
- Added `NotfoundComponent` to handle undefined paths.
- Cleaned up CSS and updated environment configurations.

--- a/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <hr class="border-gray-200 dark:border-gray-300" />
     <div class="flex flex-col items-center text-center">
       <a href="#">
-        <img class="w-auto h-16" src="/assets/Images/MatLidStore_Logo.png" alt="MatLidStore logo" />
+        <img alt="MatLidStore logo" class="w-auto h-16" src="/assets/Images/MatLidStore_Logo.png" />
       </a>
 
       <p class="max-w-md mx-auto mt-4 text-gray-500 dark:text-gray-400">
@@ -34,23 +34,23 @@
 
       <div class="flex mt-3 -mx-2 sm:mt-0">
         <a
-          href="#"
+          aria-label="Reddit"
           class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
-          aria-label="Reddit">
+          href="#">
           Teams
         </a>
 
         <a
-          href="#"
+          aria-label="Reddit"
           class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
-          aria-label="Reddit">
+          href="#">
           Privacy
         </a>
 
         <a
-          href="#"
+          aria-label="Reddit"
           class="mx-2 text-sm text-gray-500 transition-colors duration-300 hover:text-gray-500 dark:hover:text-gray-300"
-          aria-label="Reddit">
+          href="#">
           Cookies
         </a>
       </div>
