--- a/src/MLS.MatLidStoreUI/src/styles.scss
+++ b/src/MLS.MatLidStoreUI/src/styles.scss
@@ -1,10 +1,10 @@
+/* Importing Bootstrap SCSS file. */
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
+
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
 
 a {
   text-decoration: none;
