--- a/src/MLS.MatLidStoreUI/src/app/theme/components/header/header.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-gray-100">
+<header class="bg-gray-100" *ngIf="!isLoginPage">
   <nav aria-label="Global" class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8">
     <div class="flex lg:flex-1">
       <a class="-m-1.5 p-1.5" href="#">
