Update header, account, and register components
- Modified `header.component.html` to always display the header and conditionally show elements based on `isLoggedIn` status.
- Updated `header.component.ts` to change login and registration routes, and improve error handling and state management.
- Added a router link for account registration in `account.component.html`.
- Enhanced `account.component.ts` with loading and error states for better user feedback during login.
- Overhauled `register.component.html` to include a comprehensive registration form with various fields and a password visibility toggle.
- Updated `register.component.ts` with necessary imports, form validation, and API interaction for user registration.
- Corrected `AuthService.cs` to properly check if a user exists by returning the correct boolean value.

--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
@@ -71,7 +71,8 @@
               Đăng nhập
             </button>
             <p class="text-sm leading-relaxed text-grey-900">
-              Nếu bạn chưa đăng ký? <a class="font-bold text-grey-700" href="javascript:void(0)">Tạo một tài khoản</a>
+              Nếu bạn chưa đăng ký?
+              <a href="#" routerLink="/account/register" class="font-bold text-grey-700"> Tạo một tài khoản </a>
             </p>
           </form>
         </div>
