--- a/src/MLS.MatLidStoreUI/src/app/theme/components/header/header.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-gray-100" *ngIf="!isLoginPage">
+<header class="bg-gray-100">
   <nav aria-label="Global" class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8">
     <div class="flex lg:flex-1">
       <a class="-m-1.5 p-1.5" href="#">
@@ -23,7 +23,7 @@
         </svg>
       </button>
     </div>
-    <div class="hidden lg:flex lg:gap-x-12">
+    <div class="hidden lg:flex lg:gap-x-12" *ngIf="isLoggedIn">
       <div class="relative">
         <button
           (click)="toggleProductMenu()"
@@ -227,7 +227,7 @@
       </div>
       <div class="mt-6 flow-root">
         <div class="-my-6 divide-y divide-gray-500/10">
-          <div class="space-y-2 py-6">
+          <div class="space-y-2 py-6" *ngIf="isLoggedIn">
             <div class="-mx-3">
               <button
                 (click)="toggleProductMenu()"
