--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/register/register.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/register/register.component.html
@@ -1,1 +1,100 @@
-<p>register works!</p>
+<div class="bg-white rounded-lg">
+  <div class="container flex flex-col mx-auto bg-white rounded-lg">
+    <div class="flex justify-center w-full h-full my-auto xl:gap-14 lg:justify-normal md:gap-5">
+      <div class="flex items-center justify-center w-full lg:p-12">
+        <div class="flex items-center xl:p-10">
+          <form
+            #registerForm="ngForm"
+            (ngSubmit)="registerClick()"
+            class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
+            <h3 class="mb-3 text-4xl font-extrabold text-dark-grey-900">Đăng Ký</h3>
+            <p class="mb-4 text-grey-700">Nhập thông tin của bạn để tạo tài khoản</p>
+
+            <label class="mb-2 text-sm text-start text-grey-900" for="username">Họ*</label>
+            <input
+              [(ngModel)]="model.firstName"
+              name="firstName"
+              required
+              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+              id="firstName"
+              placeholder="Nhập họ"
+              type="text" />
+
+            <label class="mb-2 text-sm text-start text-grey-900" for="username">Tên*</label>
+            <input
+              [(ngModel)]="model.lastName"
+              name="lastName"
+              required
+              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+              id="lastName"
+              placeholder="Nhập tên"
+              type="text" />
+
+            <label class="mb-2 text-sm text-start text-grey-900" for="username">Tên người dùng*</label>
+            <input
+              [(ngModel)]="model.username"
+              name="username"
+              required
+              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+              id="username"
+              placeholder="Nhập tên người dùng"
+              type="text" />
+
+            <label class="mb-2 text-sm text-start text-grey-900" for="email">Email*</label>
+            <input
+              [(ngModel)]="model.email"
+              name="email"
+              required
+              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+              id="email"
+              placeholder="Nhập email"
+              type="email" />
+
+            <label class="mb-2 text-sm text-start text-grey-900" for="phoneNumber">Số điện thoại</label>
+            <input
+              [(ngModel)]="model.phoneNumber"
+              name="phoneNumber"
+              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+              id="phoneNumber"
+              placeholder="Nhập số điện thoại"
+              type="tel" />
+
+            <label class="mb-2 text-sm text-start text-grey-900" for="password">Mật khẩu*</label>
+            <div class="relative">
+              <input
+                [(ngModel)]="model.password"
+                name="password"
+                required
+                class="w-full px-5 py-4 pr-12 text-sm font-medium outline-none placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+                id="password"
+                placeholder="Nhập mật khẩu"
+                [type]="showPassword ? 'text' : 'password'" />
+              <button
+                type="button"
+                (click)="togglePassword()"
+                class="absolute inset-y-0 right-0 flex items-center px-3"
+                aria-label="Toggle password visibility"
+                title="{{ showPassword ? 'Ẩn mật khẩu' : 'Hiển thị mật khẩu' }}">
+                <i *ngIf="showPassword" class="fa fa-eye text-gray-600 hover:text-gray-800 transition duration-300"></i>
+                <i
+                  *ngIf="!showPassword"
+                  class="fa fa-eye-slash text-gray-600 hover:text-gray-800 transition duration-300"></i>
+              </button>
+            </div>
+
+            <button
+              type="submit"
+              class="w-full px-6 py-3 mt-12 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl hover:bg-purple-blue-600 focus:ring-4 focus:ring-purple-blue-100 bg-purple-blue-500">
+              Đăng ký
+            </button>
+
+            <p class="text-sm leading-relaxed text-grey-900">
+              Đã có tài khoản?
+              <a href="#" routerLink="/account/login" class="font-bold text-grey-700"> Đăng nhập </a>
+            </p>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
