Add EntityService, TableComponent, and UI enhancements
Updated appsettings.Development.json to point to a new database endpoint. Added a new Angular service `EntityService` for handling HTTP requests and a `TableComponent` for displaying entity data. Enhanced the UI of the footer, login, and registration forms with additional styling and layout adjustments. Removed unused styles and imports for cleaner code.

--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.html
@@ -6,7 +6,7 @@
           <form
             #loginForm="ngForm"
             (ngSubmit)="loginClick()"
-            class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
+            class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl form-container">
             <h3 class="mb-3 text-4xl font-extrabold text-dark-grey-900">Đăng Nhập</h3>
             <p class="mb-4 text-grey-700">Nhập tên người dùng và mật khẩu của bạn</p>
             <a
