--- a/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
@@ -1,18 +1,16 @@
-<!-- component -->
 <footer class="bg-white dark:bg-gray-900">
-  <div class="container px-6 mx-auto">
+  <div class="container pt-4 px-6 mx-auto">
     <hr class="border-gray-200 dark:border-gray-300" />
     <div class="flex flex-col items-center text-center">
       <a href="#">
         <img alt="MatLidStore logo" class="w-auto h-16" src="/assets/Images/MatLidStore_Logo.png" />
       </a>
 
-      <p class="max-w-md mx-auto mt-4 text-gray-500 dark:text-gray-400">
+      <p class="max-w-md mx-auto mt-2 text-gray-500 dark:text-gray-400">
         Modern Artistic Trends in Lifestyle & Design.
       </p>
 
       <div class="flex flex-col mt-4 items-center sm:flex-row sm:items-center sm:justify-center">
-        <!-- app.component.html -->
         <button
           (click)="onGitHubClick()"
           class="github-container flex p-1 w-1 text-sm tracking-wide text-gray-600 capitalize transition-colors duration-300 transform border rounded-md sm:mx-2 dark:border-gray-400 dark:text-gray-300 sm:mt-0 sm:w-auto hover:bg-gray-50 focus:outline-none focus:ring dark:hover:bg-gray-800 focus:ring-gray-300 focus:ring-opacity-40">
