--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.scss
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/account.component.scss
@@ -9,3 +9,10 @@
   transform: translateY(-50%);
   cursor: pointer;
 }
+
+.form-container {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 50px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+}
