--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/register/register.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/register/register.component.html
@@ -1,71 +1,77 @@
-<div class="bg-white rounded-lg">
+<div class="bg-white rounded-lg mt-2">
   <div class="container flex flex-col mx-auto bg-white rounded-lg">
     <div class="flex justify-center w-full h-full my-auto xl:gap-14 lg:justify-normal md:gap-5">
-      <div class="flex items-center justify-center w-full lg:p-12">
-        <div class="flex items-center xl:p-10">
+      <div class="flex items-center justify-center w-full lg:p-10">
+        <div class="flex items-center xl:p-8">
           <form
             #registerForm="ngForm"
             (ngSubmit)="registerClick()"
-            class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl">
+            class="flex flex-col w-full h-full pb-6 text-center bg-white rounded-3xl form-container">
             <h3 class="mb-3 text-4xl font-extrabold text-dark-grey-900">Đăng Ký</h3>
             <p class="mb-4 text-grey-700">Nhập thông tin của bạn để tạo tài khoản</p>
 
-            <label class="mb-2 text-sm text-start text-grey-900" for="username">Họ*</label>
-            <input
-              [(ngModel)]="model.firstName"
-              name="firstName"
-              required
-              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
-              id="firstName"
-              placeholder="Nhập họ"
-              type="text" />
+            <div class="flex flex-col md:flex-row md:gap-5">
+              <div class="flex flex-col md:w-1/2">
+                <label class="mb-2 text-sm text-start text-grey-900" for="firstName">Họ*</label>
+                <input
+                  [(ngModel)]="model.firstName"
+                  name="firstName"
+                  required
+                  class="input-field"
+                  id="firstName"
+                  placeholder="Nhập họ"
+                  type="text" />
+              </div>
 
-            <label class="mb-2 text-sm text-start text-grey-900" for="username">Tên*</label>
-            <input
-              [(ngModel)]="model.lastName"
-              name="lastName"
-              required
-              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
-              id="lastName"
-              placeholder="Nhập tên"
-              type="text" />
+              <div class="flex flex-col md:w-1/2">
+                <label class="mb-2 text-sm text-start text-grey-900" for="lastName">Tên*</label>
+                <input
+                  [(ngModel)]="model.lastName"
+                  name="lastName"
+                  required
+                  class="input-field"
+                  id="lastName"
+                  placeholder="Nhập tên"
+                  type="text" />
+              </div>
+            </div>
 
-            <label class="mb-2 text-sm text-start text-grey-900" for="username">Tên người dùng*</label>
+            <label class="mt-6 mb-2 text-sm text-start text-grey-900" for="username">Tên người dùng*</label>
             <input
               [(ngModel)]="model.username"
               name="username"
               required
-              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+              class="input-field"
               id="username"
               placeholder="Nhập tên người dùng"
               type="text" />
 
-            <label class="mb-2 text-sm text-start text-grey-900" for="email">Email*</label>
+            <label class="mt-6 mb-2 text-sm text-start text-grey-900" for="email">Email*</label>
             <input
               [(ngModel)]="model.email"
               name="email"
               required
-              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+              class="input-field"
               id="email"
               placeholder="Nhập email"
               type="email" />
 
-            <label class="mb-2 text-sm text-start text-grey-900" for="phoneNumber">Số điện thoại</label>
+            <label class="mt-6 mb-2 text-sm text-start text-grey-900" for="phoneNumber">Số điện thoại</label>
             <input
               [(ngModel)]="model.phoneNumber"
               name="phoneNumber"
-              class="flex items-center w-full px-5 py-4 mr-2 text-sm font-medium outline-none focus:bg-grey-400 mb-7 placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+              class="input-field"
               id="phoneNumber"
               placeholder="Nhập số điện thoại"
               type="tel" />
 
-            <label class="mb-2 text-sm text-start text-grey-900" for="password">Mật khẩu*</label>
-            <div class="relative">
+            <label class="mt-6 mb-2 text-sm text-start text-grey-900" for="password">Mật khẩu*</label>
+            <div class="relative flex items-center">
               <input
                 [(ngModel)]="model.password"
                 name="password"
                 required
-                class="w-full px-5 py-4 pr-12 text-sm font-medium outline-none placeholder:text-grey-700 bg-grey-200 text-dark-grey-900 rounded-2xl"
+                class="input-field password"
                 id="password"
                 placeholder="Nhập mật khẩu"
                 [type]="showPassword ? 'text' : 'password'" />
@@ -84,7 +90,7 @@
 
             <button
               type="submit"
-              class="w-full px-6 py-3 mt-12 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl hover:bg-purple-blue-600 focus:ring-4 focus:ring-purple-blue-100 bg-purple-blue-500">
+              class="w-full px-6 py-3 mt-12 mb-5 text-sm font-bold leading-none text-white transition duration-300 md:w-96 rounded-2xl mx-auto hover:bg-blue-600 focus:ring-4 focus:ring-blue-100 bg-blue-500">
               Đăng ký
             </button>
 
