Refactor routing and add auth guard
Introduced `authGuard` to ensure only authenticated users can access certain routes. Simplified navigation paths across multiple components. Updated `app-routing.module.ts` and `app-admin-routing.module.ts` to adjust default redirect paths and lazy loading. Enhanced `client-home.component.html` layout with `app-header`, `router-outlet`, and `app-footer` components. Created new `HomeComponent` and `ServerErrorComponent` with basic setup. Updated `styles.scss` to enforce specific styles.

--- a/src/MLS.MatLidStoreUI/src/styles.scss
+++ b/src/MLS.MatLidStoreUI/src/styles.scss
@@ -4,6 +4,6 @@
 @tailwind utilities;
 
 a {
-  text-decoration: none;
-  cursor: pointer;
+  text-decoration: none !important;
+  cursor: pointer !important;
 }
