Add metadata comments and reformat various files
- Added project metadata comments to multiple files for better documentation.
- Updated `.eslintrc.json` and `angular.json` to format arrays and objects with multi-line syntax for improved readability.
- Changed `request` type in `launch.json` from `launch` to `attach`.
- Incremented version in `package-lock.json` and `package.json` from `0.0.0` to `0.0.1`.
- Made `http` property readonly in `mls-data.service.ts`.
- Replaced `accountService.isLoggedIn()` with `accountService.getCurrentUser()` in `auth.guard.ts`.
- Adjusted margin in `admin-home.component.html` by removing `-m-24` class.
- Added CSS classes for better styling in `footer.component.scss` and `header.component.scss`.
- Added `Logout` button and additional styling to `admin-navbar.component.html`.
- Reformatted `motion-tailwind.css` for consistent indentation and line breaks.
- Improved formatting in `index.html`, `tsconfig.app.json`, `tsconfig.json`, and `tsconfig.spec.json`.
- Modified SVG content in `github-mark-white.svg` and `github-mark.svg` for better readability.

--- a/src/MLS.MatLidStoreUI/src/app/modules/admin/admin-home/admin-home.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/modules/admin/admin-home/admin-home.component.html
@@ -1,9 +1,24 @@
+<!--
+  ~ Project: MatLidStore(https://github.com/phamtiendungcw/matlidstore)
+  ~ File: admin-home.component.html
+  ~ Author: phamtiendungcw(https://github.com/phamtiendungcw)
+  ~ Created on: 15:38, 07/11/2024
+  ~
+  ~ Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+  ~
+  ~ Description:
+  ~   This file is part of the MLS.MatLidStoreUI project.
+  ~   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+  ~
+  ~ License: Proprietary and confidential.
+  -->
+
 <div>
   <app-sidebar></app-sidebar>
   <div class="bg-blueGray-100 relative md:ml-64">
     <app-admin-navbar></app-admin-navbar>
     <app-header></app-header>
-    <div class="-m-24 mx-auto w-full px-4 md:px-10">
+    <div class="mx-auto w-full px-4 md:px-10">
       <router-outlet></router-outlet>
       <app-footer></app-footer>
     </div>
