--- a/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/footer/footer.component.html
@@ -1,30 +1,47 @@
-<footer class="block py-4">
+<!--
+  ~ /*!
+  ~  * Project: MatLidStore
+  ~  * File: footer.component.html
+  ~  * Author: phamtiendungcw
+  ~  * Created on: 14:52, 07/11/2024
+  ~  *
+  ~  * Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+  ~  *
+  ~  * Description:
+  ~  *   This file is part of the MLS.MatLidStoreUI project.
+  ~  *   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+  ~  *
+  ~  * License: Proprietary and confidential.
+  ~  */
+  -->
+
+<footer class="footer block py-4">
   <div class="container mx-auto px-4">
     <hr class="border-b-1 border-blueGray-200 mb-4" />
     <div class="flex flex-wrap items-center justify-center md:justify-between">
       <div class="w-full px-4 md:w-4/12">
         <div class="text-blueGray-500 py-1 text-center text-sm font-semibold md:text-left">
           Copyright © {{ date }} by
-          <a href="#" class="text-blueGray-500 hover:text-blueGray-700 py-1 text-sm font-semibold">MATLID</a>
+          <a class="text-blueGray-500 hover:text-blueGray-700 py-1 text-sm font-semibold" href="#">MATLID</a>
         </div>
       </div>
       <div class="w-full px-4 md:w-8/12">
         <ul class="flex list-none flex-wrap justify-center md:justify-end">
           <li>
-            <a href="#" class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold">
+            <a class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold" href="#">
               MATLID
             </a>
           </li>
           <li>
-            <a href="#" class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold">
+            <a class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold" href="#">
               Tìm hiểu về chúng tôi
             </a>
           </li>
           <li>
-            <a href="#" class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold">Blog</a>
+            <a class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold" href="#">Blog</a>
           </li>
           <li>
-            <a href="#" class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold">
+            <a class="text-blueGray-600 hover:text-blueGray-800 block px-3 py-1 text-sm font-semibold" href="#">
               MIT License
             </a>
           </li>
