--- a/src/MLS.MatLidStoreUI/src/app/theme/components/sidebar/sidebar.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/sidebar/sidebar.component.html
@@ -1,1 +1,24 @@
-<p>sidebar works!</p>
+<!--
+  ~ Project: MatLidStore(https://github.com/phamtiendungcw/matlidstore)
+  ~ File: sidebar.component.html
+  ~ Author: phamtiendungcw(https://github.com/phamtiendungcw)
+  ~ Created on: 15:40, 07/11/2024
+  ~
+  ~ Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+  ~
+  ~ Description:
+  ~   This file is part of the MLS.MatLidStoreUI project.
+  ~   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+  ~
+  ~ License: Proprietary and confidential.
+  -->
+
+<nav class="sidebar fixed h-full w-64 bg-gray-800 text-white">
+  <!-- Nội dung sidebar như menu, liên kết điều hướng -->
+  <p>sidebar works!</p>
+  <ul class="space-y-4 p-4">
+    <li><a class="block rounded p-2 hover:bg-gray-700" href="#">Dashboard</a></li>
+    <li><a class="block rounded p-2 hover:bg-gray-700" href="#">Users</a></li>
+    <li><a class="block rounded p-2 hover:bg-gray-700" href="#">Settings</a></li>
+  </ul>
+</nav>
