--- a/src/MLS.MatLidStoreUI/src/app/theme/components/header/header.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/components/header/header.component.html
@@ -1,1 +1,20 @@
-<p>header works!</p>
+<!--
+  ~ Project: MatLidStore(https://github.com/phamtiendungcw/matlidstore)
+  ~ File: header.component.html
+  ~ Author: phamtiendungcw(https://github.com/phamtiendungcw)
+  ~ Created on: 15:39, 07/11/2024
+  ~
+  ~ Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+  ~
+  ~ Description:
+  ~   This file is part of the MLS.MatLidStoreUI project.
+  ~   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+  ~
+  ~ License: Proprietary and confidential.
+  -->
+
+<header class="header bg-gray-100 p-4">
+  <!-- Nội dung header, ví dụ như tiêu đề trang, thông báo -->
+  <p>header works!</p>
+  <h1 class="text-2xl font-bold">Welcome, Admin</h1>
+</header>
