--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/login-page/login-page.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/login-page/login-page.component.html
@@ -1,7 +1,22 @@
+<!--
+  ~ Project: MatLidStore(https://github.com/phamtiendungcw/matlidstore)
+  ~ File: login-page.component.html
+  ~ Author: phamtiendungcw(https://github.com/phamtiendungcw)
+  ~ Created on: 15:44, 07/11/2024
+  ~
+  ~ Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+  ~
+  ~ Description:
+  ~   This file is part of the MLS.MatLidStoreUI project.
+  ~   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+  ~
+  ~ License: Proprietary and confidential.
+  -->
+
 <div class="pt:mt-0 mx-auto flex flex-col items-center justify-center px-6 pt-8 md:h-screen">
-  <div href="#" class="mb-4 flex flex-col items-center lg:mb-6">
+  <div class="mb-4 flex flex-col items-center lg:mb-6" href="#">
     <a href="#">
-      <img src="src/assets/images/MatLidStore_Logo.png" class="mb-2 h-16" alt="MatLidStore Logo" />
+      <img alt="MatLidStore Logo" class="mb-2 h-16" src="src/assets/images/MatLidStore_Logo.png" />
     </a>
     <span class="text-center text-2xl font-bold">Modern Artistic Trends in Lifestyle & Design</span>
   </div>
@@ -9,33 +24,33 @@
   <div class="w-full rounded-lg bg-white shadow sm:max-w-screen-sm md:mt-0 xl:p-0">
     <div class="space-y-8 p-6 sm:p-8 lg:p-16">
       <h2 class="text-center text-2xl font-bold text-blue-800 lg:text-3xl">Đăng nhập vào nền tảng</h2>
-      <form class="mt-8 space-y-6" action="#">
+      <form action="#" class="mt-8 space-y-6">
         <div>
-          <label for="username" class="mb-2 block text-sm font-medium text-gray-700">Tên đăng nhập</label>
+          <label class="mb-2 block text-sm font-medium text-gray-700" for="username">Tên đăng nhập</label>
           <input
-            type="username"
-            name="username"
-            id="username"
             class="w-full rounded-lg border border-gray-300 p-3 focus:outline-none focus:ring-2 focus:ring-cyan-600"
+            id="username"
+            name="username"
             placeholder="Nhập tên người dùng của bạn"
             required
+            type="username"
           />
         </div>
         <div>
-          <label for="password" class="mb-2 block text-sm font-medium text-gray-700">Mật khẩu</label>
+          <label class="mb-2 block text-sm font-medium text-gray-700" for="password">Mật khẩu</label>
           <div class="relative">
             <input
-              name="password"
-              id="password"
               class="input-pw w-full rounded-lg border border-gray-300 p-3 focus:outline-none focus:ring-2 focus:ring-cyan-600"
+              id="password"
+              name="password"
               placeholder="Nhập mật khẩu của bạn"
               required
               [type]="showPassword ? 'text' : 'password'"
             />
             <button
-              type="button"
-              class="absolute inset-y-0 right-0 px-3 py-2"
               aria-label="Toggle password visibility"
+              class="absolute inset-y-0 right-0 px-3 py-2"
+              type="button"
               [title]="showPassword ? 'Ẩn mật khẩu' : 'Hiển thị mật khẩu'"
               (click)="togglePasswordVisibility()"
             >
@@ -46,29 +61,29 @@
         <div class="flex items-start">
           <div class="flex h-5 items-center">
             <input
-              id="remember"
               aria-describedby="remember"
+              class="focus:ring-3 h-4 w-4 rounded border-gray-300 bg-gray-50 focus:outline-none focus:ring-blue-200"
+              id="remember"
               name="remember"
               type="checkbox"
-              class="focus:ring-3 h-4 w-4 rounded border-gray-300 bg-gray-50 focus:outline-none focus:ring-blue-200"
             />
           </div>
           <div class="ml-3 text-sm">
-            <label for="remember" class="font-medium text-gray-700">Ghi nhớ tôi</label>
+            <label class="font-medium text-gray-700" for="remember">Ghi nhớ tôi</label>
           </div>
-          <a href="#" class="ml-auto text-sm text-blue-500 hover:underline">Quên mật khẩu?</a>
+          <a class="ml-auto text-sm text-blue-500 hover:underline" href="#">Quên mật khẩu?</a>
         </div>
         <div class="text-center">
           <button
-            type="submit"
             class="w-full rounded-lg bg-blue-600 px-5 py-3 text-center text-base font-medium text-white hover:bg-blue-700 focus:ring-4 focus:ring-blue-200 sm:w-auto"
+            type="submit"
           >
             Đăng nhập
           </button>
         </div>
         <div class="text-center text-sm font-medium text-gray-500">
           Nếu bạn chưa có tài khoản?
-          <a routerLink="/account/register" class="text-blue-500 hover:underline">Tạo tài khoản</a>
+          <a class="text-blue-500 hover:underline" routerLink="/account/register">Tạo tài khoản</a>
         </div>
       </form>
     </div>
