--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/account/login-page/login-page.component.scss
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/account/login-page/login-page.component.scss
@@ -1,3 +1,18 @@
+/*!
+ * Project: MatLidStore(https://github.com/phamtiendungcw/matlidstore)
+ * File: login-page.component.scss
+ * Author: phamtiendungcw(https://github.com/phamtiendungcw)
+ * Created on: 15:41, 07/11/2024
+ *
+ * Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+ *
+ * Description:
+ *   This file is part of the MLS.MatLidStoreUI project.
+ *   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+ *
+ * License: Proprietary and confidential.
+ */
+
 .input-pw {
   padding-right: 3rem !important;
 }
