--- a/src/MLS.MatLidStoreUI/src/app/theme/pages/user-info/user-info.component.html
+++ b/src/MLS.MatLidStoreUI/src/app/theme/pages/user-info/user-info.component.html
@@ -1,1 +1,16 @@
+<!--
+  ~ Project: MatLidStore(https://github.com/phamtiendungcw/matlidstore)
+  ~ File: user-info.component.html
+  ~ Author: phamtiendungcw(https://github.com/phamtiendungcw)
+  ~ Created on: 15:42, 07/11/2024
+  ~
+  ~ Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+  ~
+  ~ Description:
+  ~   This file is part of the MLS.MatLidStoreUI project.
+  ~   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+  ~
+  ~ License: Proprietary and confidential.
+  -->
+
 <p>user-info works!</p>
