--- a/src/MLS.MatLidStoreUI/src/styles.scss
+++ b/src/MLS.MatLidStoreUI/src/styles.scss
@@ -1,3 +1,18 @@
+/*!
+ * Project: MatLidStore(https://github.com/phamtiendungcw/matlidstore)
+ * File: styles.scss
+ * Author: phamtiendungcw(https://github.com/phamtiendungcw)
+ * Created on: 15:44, 07/11/2024
+ *
+ * Copyright (c) 2024 Pham Tien Dung. All rights reserved.
+ *
+ * Description:
+ *   This file is part of the MLS.MatLidStoreUI project.
+ *   Unauthorized copying or distribution of this file, via any medium, is strictly prohibited.
+ *
+ * License: Proprietary and confidential.
+ */
+
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Tailwind CSS file. */
